--- a/Client/mini_health/package.json
+++ b/Client/mini_health/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --config=jest.config.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -42,7 +42,22 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "msw": "^2.0.11"
+    "msw": "^2.0.11",
+    "regenerator-runtime": "^0.14.1",
+    "ts-jest": "^29.1.1"
+  },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/src/setupTests.js"
+    ],
+    "transform": {
+      "^.+\\.[jt]sx?$": "babel-jest"
+    }
   }
+  
 }
